Ejercicios de Slack

--- a/02_13/02_13-ejercicio_slack.html
+++ b/02_13/02_13-ejercicio_slack.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="02_13-ejercicio_slack.js"></script>
+    <script src="02_13-ejercicio_slack_2.js"></script>
     <title>Ejercicio Slack</title>
 </head>
 <body>
-    
+    <!-- <input type="button" onclick="solicitarNum()" value="Solicitar números">
+    <input type="button" onclick="calcularNum()" value="Hacer cálculo">         -->
 </body>
 </html>
