Ejercicio algoritmia 02_13 resuelto

--- a/02_13/02_13-ejercicio_algoritmia.html
+++ b/02_13/02_13-ejercicio_algoritmia.html
@@ -8,8 +8,8 @@
     <title>Ejercicio Algoritmia</title>
 </head>
 <body>
-    <input type="button" onclick="mensaje()" value="Solicitar notas">
-    <input type="button" onclick="MEDIA()" value="Calcular la media">
-    <input type="button" onclick="notas()" value="Notas">
+    <input type="button" onclick="solicitarNotas()" value="Sumar notas">
+    <input type="button" onclick="media()" value="Calcular la media">
+    <input type="button" onclick="notas()" value="Nota final">
 </body>
 </html>
