--- a/02_14/02_14-ejercicio_responsive.html
+++ b/02_14/02_14-ejercicio_responsive.html
@@ -5,16 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="02_13-practica_grid_flex.css">
-  <title>Práctica CSS-Grid</title>
+  <title>Práctica Responsive</title>
 </head>
 <body>
-  <header class="grid-container">
-    <h1 class="grid-item item1 text-transform">Práctica CSS-Grid</h1>
-  </header>
+    <div>
+        <header class="grid-container">
+            <h1 class="grid-item text-transform">Práctica CSS-Grid</h1>
+        </header>
+    </div>
   <main class="grid-container">
-    <aside class="grid-item item2">act
+    <aside class="grid-item">
     </aside>
-    <section class="grid-item item3">
+    <section class="grid-item">
       <h2 class="text-transform">Título</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <div class="grid-container2">
@@ -27,11 +29,11 @@
         </div>
       </div>
     </section>
-    <div class="grid-item item4">Widget 1</div>
-    <div class="grid-item item5">Widget 2</div>
+    <div class="grid-item">Widget 1</div>
+    <div class="grid-item">Widget 2</div>
   </main>
   <footer class="grid-container">
-    <p class="grid-item item6 text-transform">Footer</p>
+    <p class="grid-item text-transform">Footer</p>
   </footer>
 </body>
 </html>
