--- a/02_14/02_14-practica_responsive.html
+++ b/02_14/02_14-practica_responsive.html
@@ -4,20 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="02_14-practica_responsive.css">
-    <title>Práctica Responsive</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="02_14-practica_responsive.css"></style>
 </head>
 <body>
-    <header>
-        <div>
-            <h1>LOGO</h1>
+    <header class="bg-dark">
+        <div class="container">
+            <div>LOGO</div>
         </div>
     </header>
-    <main>
-
+    <main class="gridContainer tres">
+        <h1>cosa</h1>
+        <div>
+            <div>foto 1</div>
+            <div>foto 2</div>
+            <div>foto 3</div>
+            <div>foto 4</div>
+            <div>foto 5</div>
+            <div>foto 6</div>
+        </div>
+        <div class="bg-dark gridContainer cuatro">
+            <div>foto 1</div>
+            <div>foto 2</div>
+            <div>foto 3</div>
+            <div>foto 4</div>
+            <div>foto 5</div>
+            <div>foto 6</div>
+            <div>foto 7</div>
+            <div>foto 8</div>
+        </div>
     </main>
-    <footer>
-        <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim repellat tempora corrupti neque eius. Debitis nihil exercitationem corrupti tenetur non fuga? Deserunt corporis in quis deleniti vitae, harum iure tempore.</div>
+    <footer class="bg-dark">
+        <div class="container">Lorem ipsum</div>
     </footer>
 </body>
 </html>
