Práctica DOM empezada

--- a/02_13/02_13-practica_grid_flex.html
+++ b/02_13/02_13-practica_grid_flex.html
@@ -12,7 +12,8 @@
     <h1 class="grid-item item1 text-transform">Práctica CSS-Grid</h1>
   </header>
   <main class="grid-container">
-    <aside class="grid-item item2">act
+    <aside class="grid-item item2">
+      <p>Publicidad</p>
     </aside>
     <section class="grid-item item3">
       <h2 class="text-transform">Título</h2>
