--- a/02_15/02_15-practica_dom.html
+++ b/02_15/02_15-practica_dom.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="02_14-practica_dom.css">
+    <link rel="stylesheet" href="02_15-practica_dom.css">
     <title>Práctica DOM</title>
 </head>
 <body class="grid-container">
@@ -48,7 +48,8 @@
         </section>
         <section class="grid-item">
             <h2>Destinos</h2>
-            <form>
+            <select name="" id=""></select>
+            <!-- <form>
                 <input list="destinos" name="destinos" id="lista">
                 <datalist id="destinos">
                   <option value="Burgos">
@@ -56,7 +57,7 @@
                   <option value="Toledo">
                   <option value="Mallorca">
                 </datalist>
-              </form>
+              </form> -->
         </section>
     </main>
 </body>
