Creo carpeta 02_16 con ejercicio Slack

--- a/02_15/02_15-eventos.html
+++ b/02_15/02_15-eventos.html
@@ -22,7 +22,7 @@
 
         const caja = document.getElementById("caja");
 
-        const mostrarMensaje = () => (console.log("Este es el mensaje"))
+        const mostrarMensaje = () => {console.log("Este es el mensaje")}
 
         caja.addEventListener("click", mostrarMensaje);
 
