Archivos clase formularios

--- a/02_21/02_21-ejercicio_algoritmia.html
+++ b/02_21/02_21-ejercicio_algoritmia.html
@@ -12,6 +12,6 @@
 
     </div>
     
-    <script src="02_21-ejercicio.js"></script>
+    <script src="02_21-ejercicio_algoritmia.js"></script>
 </body>
 </html>
