Creo la carpeta 02_23

--- a/02_22/ejercicio_algoritmo/index.html
+++ b/02_22/ejercicio_algoritmo/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 
-    <div>
+    <div id="contenedor">
         <button id="piedra">Piedra</button>
         <button id="papel">Papel</button>
         <button id="tijera">Tijera</button>
     </div>
 
-    <script src="02_22-ejercicio_algoritmia.js"></script>
+    <script src="main.js"></script>
     
 </body>
 </html>
